--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,7 @@ h6 {
   /* IE9 Compat Modes */
   src: local(""), url("../fonts/open-sans-v18-latin-regular.eot?#iefix") format("embedded-opentype"), url("../fonts/open-sans-v18-latin-regular.woff2") format("woff2"), url("../fonts/open-sans-v18-latin-regular.woff") format("woff"), url("../fonts/open-sans-v18-latin-regular.ttf") format("truetype"), url("../fonts/open-sans-v18-latin-regular.svg#OpenSans") format("svg");
   /* Legacy iOS */
+  font-display: swap;
 }
 
 /* open-sans-italic - latin */
@@ -105,6 +106,7 @@ h6 {
   /* IE9 Compat Modes */
   src: local(""), url("../fonts/open-sans-v18-latin-italic.eot?#iefix") format("embedded-opentype"), url("../fonts/open-sans-v18-latin-italic.woff2") format("woff2"), url("../fonts/open-sans-v18-latin-italic.woff") format("woff"), url("../fonts/open-sans-v18-latin-italic.ttf") format("truetype"), url("../fonts/open-sans-v18-latin-italic.svg#OpenSans") format("svg");
   /* Legacy iOS */
+  font-display: swap;
 }
 
 /* open-sans-600 - latin */
@@ -116,6 +118,7 @@ h6 {
   /* IE9 Compat Modes */
   src: local(""), url("../fonts/open-sans-v18-latin-600.eot?#iefix") format("embedded-opentype"), url("../fonts/open-sans-v18-latin-600.woff2") format("woff2"), url("../fonts/open-sans-v18-latin-600.woff") format("woff"), url("../fonts/open-sans-v18-latin-600.ttf") format("truetype"), url("../fonts/open-sans-v18-latin-600.svg#OpenSans") format("svg");
   /* Legacy iOS */
+  font-display: swap;
 }
 
 /* open-sans-700 - latin */
@@ -127,6 +130,7 @@ h6 {
   /* IE9 Compat Modes */
   src: local(""), url("../fonts/open-sans-v18-latin-700.eot?#iefix") format("embedded-opentype"), url("../fonts/open-sans-v18-latin-700.woff2") format("woff2"), url("../fonts/open-sans-v18-latin-700.woff") format("woff"), url("../fonts/open-sans-v18-latin-700.ttf") format("truetype"), url("../fonts/open-sans-v18-latin-700.svg#OpenSans") format("svg");
   /* Legacy iOS */
+  font-display: swap;
 }
 
 body {
